--- a/display/scss/main.scss
+++ b/display/scss/main.scss
@@ -4,3 +4,388 @@
 	box-sizing: border-box;
 	font-family: 'Roboto', sans-serif;
 }
+
+//variables
+//for extra-small viewports, use max-width
+$xsml: 576px;
+//min-width for the following viewports
+$sml: 540px;
+$med: 720px;
+$lrg: 960px;
+$xlrg: 1140px;
+$gridCol: 12;
+$dark: #242323;
+$card: #363636;
+
+// mixins
+@mixin mediaQuery($arg){
+	@media screen and (min-width: $arg){
+		@content;
+	}
+}
+
+@mixin gameArt{
+	background: #3A1C71;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	transition: 1s ease;
+}
+
+@mixin webUx{
+	background: rgb(44,45,199);
+	background: linear-gradient(90deg, rgba(44,45,199,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+}
+
+@mixin graphic{
+	background: rgb(157,226,254);
+	background: linear-gradient(225deg, rgba(157,226,254,1) 0%, rgba(255,195,138,1) 57%, rgba(215,65,119,1) 100%);
+}
+
+// @mixin after{
+// 	display:block;
+// 	content: '';
+// 	border-bottom: solid 0.4rem;
+// 	transform: scaleX(0);
+// 	transition: transform 250ms ease-in-out;
+// 	border-radius: 10px;
+// }
+//
+// @mixin hoverAfter{
+// 	transform: scaleX(1);
+// }
+
+//grids and media-queries
+
+.container {
+	max-width: $xlrg;
+	margin: 0 auto;
+	&-fluid {
+		margin: 0;
+		max-width: 100%;
+	}
+	&-row {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+	}
+}
+
+@for $i from 1 through $gridCol {
+	.col-#{$i} {
+		flex-basis: (100 / ($gridCol / $i) ) * 1%;
+	}
+}
+
+@media screen and (min-width: $med) {
+	@for $i from 1 through $gridCol {
+		.colmd-#{$i} {
+			flex-basis: (100 / ($gridCol / $i) ) * 1%;
+		}
+	}
+}
+
+@media screen and (min-width: $sml) {
+	@for $i from 1 through $gridCol {
+		.colsml-#{$i} {
+			flex-basis: (100 / ($gridCol / $i) ) * 1%;
+		}
+	}
+}
+@media screen and (min-width: $lrg) {
+	@for $i from 1 through $gridCol {
+		.collrg-#{$i} {
+			flex-basis: (100 / ($gridCol / $i) ) * 1%;
+		}
+	}
+}
+@media screen and (min-width: $xlrg) {
+	@for $i from 1 through $gridCol {
+		.colxlrg-#{$i} {
+			flex-basis: (100 / ($gridCol / $i) ) * 1%;
+		}
+	}
+}
+
+body{
+	background-color: $dark;
+}
+
+.landing{
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
+
+.justify-content{
+	display: flex;
+	justify-content: center;
+}
+
+.era{
+	margin-top: 1.3rem;
+	font-size: 3rem;
+	color: #FEFEFE;
+
+	@include mediaQuery($med){
+		display: inline-block;
+		font-size: 9rem;
+		margin: 1rem;
+	}
+
+	@include mediaQuery($lrg){
+		display: inline-block;
+		font-size: 15rem;
+		margin: 1rem;
+	}
+}
+
+
+button {
+	background-color: transparent;
+	border: 2px solid;
+	font: inherit;
+	line-height: 1;
+	margin: 0.5em;
+	padding: 1em 2em;
+	border-radius: 2.5rem;
+	text-transform: uppercase;
+	font-weight: bold;
+	transition: 1s ease;
+
+	&:hover,
+	&:focus {
+		box-shadow: inset 0 0 0 2em var(--hover);
+		@include gameArt;
+	}
+}
+
+.btn:hover,
+.btn:focus {
+	color: white;
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+}
+
+
+.webBtn{
+		background-image: linear-gradient(to right, #006175 0%, #00a950 100%);
+
+}
+
+
+.graphic:hover{
+	transition: .5s ease;
+	border: 2px solid;
+}
+
+
+.web:hover{
+	transition: 0.8s;
+	border: 2px solid;
+}
+
+.card{
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	padding: 6px;
+	text-align: center;
+	max-width: 80%;
+	background-color: $card;
+	margin: 1rem;
+	color: #FEFEFE;
+	border-radius: 5px;
+	transition: 1s;
+	display: flex;
+	flex: 1 1 auto;
+	max-height: 100%;
+	&-img{
+		height: 7.7rem;
+		width: 100%;
+		padding: 0.4rem;
+		border-radius: 100%;
+		overflow-x: none;
+	}
+
+	&-content{
+		padding-top: 1rem;
+		padding-right: 1rem;
+	}
+}
+
+.cardHolder{
+	display: flex;
+	flex-direction: row;
+
+	@include mediaQuery($sml){
+		max-width: 100%;
+	}
+
+	@include mediaQuery($med){
+		display: flex;
+		justify-content: space-around;
+		margin: 4.5rem;
+	}
+
+}
+
+
+
+#header{
+	text-align: center;
+	background-color: purple;
+	top: -30vh;
+	height: 30vh;
+	width: 100%;
+	position: fixed;
+	transition: 1s ease;
+	z-index: 2;
+
+	&.active{
+		top: 0;
+	}
+
+	@include mediaQuery($xlrg){
+		height: 20vh;
+		top: -20vh;
+	}
+}
+
+.portrait{
+	display: flex;
+	justify-content: center;
+	margin-top: 2rem;
+	width: 5rem;
+	height: 5.5rem;
+	padding: 0.1rem;
+	border-radius: 80%;
+
+	@media(orientation: landscape){
+		margin-top: 0.1rem;
+		width: 3rem;
+		height: 3.5rem;
+	}
+}
+
+.content{
+	padding: 0.4rem;
+
+	@include mediaQuery($med){
+		padding: 0.5rem;
+	}
+
+	@media (orientation: landscape){
+		top: -4rem;
+		padding: 0rem;
+	}
+}
+
+#exit{
+	float: left;
+	font-size: 2rem;
+	padding: 0.5rem;
+}
+
+#footer{
+	width: 100%;
+	height: 70vh;
+	position: fixed;
+	overflow-y: scroll;
+	bottom: -70vh;
+	transition: 1s ease;
+	z-index: 2;
+	background-color: blue;
+
+	&.active{
+		bottom: 0;
+	}
+
+	@include mediaQuery($xlrg){
+		height: 80vh;
+		bottom: -80vh;
+	}
+}
+
+.portraitLrg{
+	display: flex;
+	align-content: center;
+	justify-content: center;
+
+	@include mediaQuery($med){
+		width: 7rem;
+		height: 100%;
+	}
+
+	@include mediaQuery($lrg){
+		width: 100%;
+		height: 100%;
+	}
+}
+
+.bioLrg{
+	color: #FEFEFE;
+	text-align: center;
+	padding-left: 1rem;
+	padding-right: 1rem;
+
+	@include mediaQuery($xsml){
+	}
+
+	@include mediaQuery($lrg){
+		h2{
+			font-size: 1.5rem;
+		}
+
+		p{
+			font-size: 1rem;
+		}
+		height: 100%;
+	}
+}
+
+
+
+.era{
+	margin-top: 3rem;
+}
+
+
+#E{
+	width: 4rem;
+	height: 4rem;
+}
+
+#R{
+	width: 4rem;
+	height: 4rem;
+}
+
+#A{
+	width: 4rem;
+	height: 4rem;
+}
+
+// #E::after{
+// 	@include graphic;
+// 	@include after;
+// }
+//
+// #E:hover::after{
+// 	@include hoverAfter;
+// }
+//
+// #R::after{
+// 	@include webUx;
+// 	@include after;
+// }
+//
+// #R:hover::after{
+// 	@include hoverAfter;
+// }
+//
+// #A::after{
+// 	@include gameArt;
+// 	@include after;
+// }
+//
+// #A:hover::after{
+// 	@include hoverAfter;
+// }
